# async

./: README.md  meson.build
examples/: example.cpp  lock.cpp  meson.build  socket_read.cpp
include/async/: coro.hpp  current.hpp  error_code.hpp  event.hpp  exceptions.hpp  function_ref.hpp  lock.hpp  pending_group.hpp  pending_op.hpp  scheduler.hpp  shared_buffer.hpp  socket.hpp  this_coro.hpp
include/async/impl/: asio_fwd.hpp  coro_context.hpp  coro_impl.hpp  event_sink.hpp  function_traits.hpp  handler_base.hpp  intrusive_list.hpp  io.hpp  pending_op.hpp  signaled.hpp  this_coro.hpp  wait_queue.hpp
src/: coro_context.cpp  coro_impl.cpp  pending_group.cpp  pending_op.cpp  scheduler.cpp  shared_buffer.cpp  socket.cpp  wait_queue.cpp
