# SPDX-License-Identifier: LGPL-2.1-or-later

executable(
    'example',
    'example.cpp',
    include_directories: incdir,
    dependencies: [asynclib_dep],
)

executable(
    'sockread',
    'socket_read.cpp',
    include_directories: incdir,
    dependencies: [asynclib_dep],
)

executable(
    'lock',
    'lock.cpp',
    include_directories: incdir,
    dependencies: [asynclib_dep],
)
